--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Private/tests.py
 Private/tests.ipynb
 Private/countries.csv
 Private/melb_data/melb_data.csv
+Private/data/countries.csv
+Private/data/melb_data.csv
+Private/
