--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Private/melb_data/melb_data.csv
 Private/data/countries.csv
 Private/data/melb_data.csv
 Private/
+Project_1 HH analitics/data/dst-3.0_16_1_hh_database.csv
+Project_1 HH analitics/data/dst-3.0_16_3_hh_database_preprocessed.csv
+Project_1 HH analitics/data/ExchangeRates.csv
