--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Private/
 Project_1 HH analitics/data/dst-3.0_16_1_hh_database.csv
 Project_1 HH analitics/data/dst-3.0_16_3_hh_database_preprocessed.csv
 Project_1 HH analitics/data/ExchangeRates.csv
+ProdOrderImp17320.xml
