--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ Project_1 HH analitics/data/dst-3.0_16_3_hh_database_preprocessed.csv
 Project_1 HH analitics/data/ExchangeRates.csv
 ProdOrderImp17320.xml
 output/
+auto-py-to-exe/
