--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ ProdOrderImp17320.xml
 output/
 auto-py-to-exe/
 .vscode/settings.json
+Project_3 Booking rating case/data/hotels.csv
+Project_3 Booking rating case/data/hotels_train.csv
+Project_3 Booking rating case/data/hotels_test.csv
+Project_3 Booking rating case/data/API_NY.GDP.MKTP.CD_DS2_en_excel_v2_3731268.xls
+Project_3 Booking rating case/data/submission.csv
