gitignore edit + some data analitics save

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ Project_3 Booking rating case/data/API_NY.GDP.MKTP.CD_DS2_en_excel_v2_3731268.xl
 Project_3 Booking rating case/data/submission.csv
 main.py
 __pycache__/main.cpython-39.pyc
+Project_4 Bank data cluster/data/bank_fin.zip
