--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Project_3 Booking rating case/data/submission.csv
 main.py
 __pycache__/main.cpython-39.pyc
 Project_4 Bank data cluster/data/bank_fin.zip
+code-review.csv
