--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ main.py
 __pycache__/main.cpython-39.pyc
 Project_4 Bank data cluster/data/bank_fin.zip
 code-review.csv
+auto-py-to-exe
+auto-py-to-exe
